search-engine completed

--- a/giphy-search-engine/index.html
+++ b/giphy-search-engine/index.html
@@ -6,6 +6,9 @@
   <title>Giphy Search Engine</title>
 </head>
 <body>
+    <div id="tv-area" class="container img-center">
+
+    </div>
     <!-- 검색창 -->
     <div id="input-area" class="container container-padding50">
         <input type="text" id="js-input" class="container-textinput">
@@ -18,5 +21,6 @@
     </div>
 
     <script src="./main.js"></script>
+    <!-- <script src="./gif_tv.js"></script> -->
 </body>
 </html>
