--- a/giphy-search-engine/index.html
+++ b/giphy-search-engine/index.html
@@ -21,6 +21,6 @@
     </div>
 
     <script src="./main.js"></script>
-    <!-- <script src="./gif_tv.js"></script> -->
+    <script src="./gif_tv.js"></script>
 </body>
 </html>
